# easyGraph

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Node.h  Nodo.h  Nodo_double.cpp  Nodo_double.h  Nodo_funcion_binaria.cpp  Nodo_funcion_binaria.h  Nodo_funcion_unaria.h  README.md  README.md~  SimpleView2.ui  arbol_binario.cpp  binary_tree.cpp  binary_tree.h  build.sh  countcontroller.cpp  countmodel.h  easyGraph  easyGraph.pro  graficador.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  moc_countcontroller.cpp  moc_mainwindow.cpp  moc_mainwindow.cxx_parameters  testgit  ui_mainwindow.h
Controller/: appcontroller.cpp  appcontroller.h  countcontroller.cpp  countcontroller.h
Model/: countmodel.cpp
Parser/: Arbol binario.cpp  BTNode.java  BinaryExpressionTree.h  BinaryTreeNode.h  LinkedBinaryTree.h  LinkedBinaryTree.java  Main.java  Makefile  Nodo.cpp  Nodo.h  Nodo_double.cpp  Nodo_double.h  Nodo_funcion_binaria.cpp  Nodo_funcion_binaria.h  Nodo_funcion_unaria.cpp  Nodo_funcion_unaria.h  Parser.cbp  Parser.depend  Parser.layout  ReadMe.txt  arbol_binario.cpp  arbol_binario.h  expressions.txt  funciones.h  function_creator.cpp  function_creator.h  main-anterior.cpp  main.cpp  mainParser.cpp  procesador_de_arbol.cpp  procesador_de_arbol.h  test
Resources/: res.qrc  resources.qrc
View/: mainwindow.cpp  mainwindow.h  mainwindow.ui
build-easyGraph-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  qrc_resources.cpp
html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _interpretador_8cpp.html  _interpretador_8h.html  _interpretador_8h_source.html  _nodo_8cpp.html  _nodo_8h.html  _nodo_8h_source.html  _nodo__double_8cpp.html  _nodo__double_8h.html  _nodo__double_8h_source.html  _nodo__funcion__binaria_8cpp.html  _nodo__funcion__binaria_8h.html  _nodo__funcion__binaria_8h_source.html  _nodo__funcion__unaria_8cpp.html  _nodo__funcion__unaria_8h.html  _nodo__funcion__unaria_8h_source.html  _parser_2include_2tipos_01de_01datos_8h.html  _parser_2include_2tipos_01de_01datos_8h_source.html  _parser_2main_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  arbol__binario_8cpp.html  arbol__binario_8h.html  arbol__binario_8h_source.html  class_gpadre-members.html  class_gpadre.html  class_graficador-members.html  class_graficador.html  class_graficador1-members.html  class_graficador1.html  class_interpretador-members.html  class_interpretador.html  class_main_window-members.html  class_main_window.html  class_nodo-members.html  class_nodo.html  class_nodo__double-members.html  class_nodo__double.html  class_nodo__funcion__binaria-members.html  class_nodo__funcion__binaria.html  (+221 more)
include/: gpadre.h  graficador.h  graficador1.h  mainwindow.h  tipos de datos.h
latex/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _interpretador_8cpp.tex  _interpretador_8h.tex  _nodo_8cpp.tex  _nodo_8h.tex  _nodo__double_8cpp.tex  _nodo__double_8h.tex  _nodo__funcion__binaria_8cpp.tex  _nodo__funcion__binaria_8h.tex  _nodo__funcion__unaria_8cpp.tex  _nodo__funcion__unaria_8h.tex  _parser_2include_2tipos_01de_01datos_8h.tex  _parser_2main_8cpp.tex  annotated.tex  arbol__binario_8cpp.tex  arbol__binario_8h.tex  class_gpadre.eps  class_gpadre.tex  class_graficador.eps  class_graficador.tex  class_graficador1.tex  class_interpretador.tex  class_main_window.tex  class_nodo.eps  class_nodo.tex  class_nodo__double.eps  class_nodo__double.tex  class_nodo__funcion__binaria.eps  class_nodo__funcion__binaria.tex  (+111 more)
temp/: Makefile  (+8 more)
(+172 files in other folders)
